--- a/package.json
+++ b/package.json
@@ -6,18 +6,23 @@
     "watch:build": "tsc --watch"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.4.6",
     "@types/config": "0.0.34",
     "@types/node-fetch": "^2.3.0",
     "@types/ws": "^6.0.1",
     "config": "^3.0.1",
+    "express": "^4.16.4",
     "lino-js": "^1.0.14",
     "node-fetch": "^2.3.0",
     "secp256k1": "^3.6.2",
+    "simpletts": "^2.4.0",
+    "speak-tts": "^2.0.8",
     "tsc": "^1.20150623.0",
     "typescript": "^3.4.2",
     "ws": "^6.2.1"
   },
   "devDependencies": {
+    "@types/express": "^4.16.1",
     "rimraf": "^2.6.3"
   }
 }
